# Widget-64

./: AGENTS.md  README.md  package-lock.json  package.json  terminal64-delegation-2026-05-01T23-59-24-273Z-21ee1c11.md  terminal64-delegation-2026-05-02T00-25-51-345Z-a63a67ec.md  terminal64-delegation-2026-05-03T14-21-12-212Z-16d8448e.md  terminal64-delegation-2026-05-03T14-23-20-008Z-2fbd4d3f.md  terminal64-delegation-2026-05-03T14-25-07-918Z-c7248668.md
.cursor/: mcp.json
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
.wolf/: anatomy.md  buglog.json  cerebrum.md  memory.md  token-ledger.json
.wolf/hooks/: _session.json
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: discord_bot.rs  lib.rs  types.rs  widget_instructions.rs  widget_scaffold.rs
src-tauri/src/providers/: claude.rs  codex.rs  cursor.rs  util.rs
src/components/canvas/: Canvas.css  Canvas.tsx  FloatingTerminal.css  FloatingTerminal.tsx  ProviderSessionDialog.tsx
src/components/provider-chat/: ChatMessage.tsx  ProviderChat.tsx
src/components/settings/: SettingsPanel.tsx
src/components/widget/: WidgetDialog.tsx  useWidgetBridgeHost.ts
src/components/widget64/: WidgetManager.css  WidgetManager.tsx  WidgetWorkspace.css  WidgetWorkspace.tsx
src/lib/: keybindingEngine.ts  promptSanitization.ts  providerModularity.verification.ts  runtime.ts  skillPrompt.ts  tauriApi.ts  types.ts
src/lib/providerRuntimes/: anthropic.ts  openai.ts  openaiSessionMetadata.ts
src/stores/: canvasStore.ts  providerSessionStore.ts
