[package]
name = "widget-64"
version = "0.1.0"
description = "A spatial desktop for standalone Tauri widgets"
authors = ["Pugbread"]
license = "MIT"
repository = "https://github.com/Pugbread/Widget-64"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde_json = "1"
serde = { version = "1", features = ["derive"] }
tauri = { version = "2", features = ["macos-private-api", "devtools", "unstable"] }
portable-pty = "0.8"
uuid = { version = "1", features = ["v4"] }
tauri-plugin-dialog = "2.7.0"
tauri-plugin-process = "2.3.0"
tauri-plugin-updater = "2.10.0"
dirs = "5"
url = "2"
chrono = "0.4"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time", "net"] }
async-trait = "0.1"
reqwest = { version = "0.12", features = ["blocking", "json", "native-tls", "stream"], default-features = false }
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }
futures-util = "0.3"
base64 = "0.22"
rand = "0.8"
zip = "2"
rusqlite = { version = "0.39", features = ["bundled"] }
zerocopy = "0.8"
toml_edit = "0.25"
# Voice control: mic capture + resample + ASR
cpal = "0.15"
rubato = "0.15"
# ONNX runtime for voice models (wake word, VAD, Moonshine ASR).
ort = { version = "=2.0.0-rc.11", default-features = false, features = ["std", "ndarray", "download-binaries", "tls-native"] }
ndarray = "0.17"
tokenizers = { version = "0.22", default-features = false, features = ["onig"] }
sha2 = "0.10"
hex = "0.4"
# whisper-rs is optional: its whisper.cpp build requires cmake, which isn't
# a baseline dev dep yet. Enable with `--features voice-dictation` once cmake
# is provisioned on the build host. The voice/whisper.rs stub compiles either way.
whisper-rs = { version = "0.13", default-features = false, optional = true }
# Discord voice-note transcription: after afconvert/ffmpeg turns the OGG Opus
# attachment into a WAV, symphonia reads it into f32 PCM for whisper-rs.
symphonia = { version = "0.5", default-features = false, features = ["wav", "pcm"] }

[features]
# Voice dictation is OFF by default so fresh clones build without cmake +
# LLVM/libclang (whisper-rs's bindgen step needs both). Enable on macOS/Linux
# with `cargo build --features voice-dictation`; on Windows also set
# `LIBCLANG_PATH` to your LLVM install (winget install LLVM.LLVM).
default = []
# Enable whisper.cpp dictation. Requires:
#  - cmake (to compile whisper.cpp)
#  - LLVM/libclang (bindgen reads whisper.h — without it every struct field
#    collapses to `_address` and you get ~70 E0609 errors on build)
voice-dictation = ["dep:whisper-rs"]
# Experimental: grammar-constrained decoding for the command STT path. Off by default
# because the grammar is still being tuned; referenced from voice/command_stt.rs.
voice-command-grammar = []

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"

# Enable the Metal GPU backend for whisper.cpp only on macOS; unions with the base optional entry above.
[target.'cfg(target_os = "macos")'.dependencies.whisper-rs]
version = "0.13"
default-features = false
features = ["metal"]
optional = true

[lints.rust]
unsafe_code = "warn"
unused_must_use = "deny"

[lints.clippy]
all = { level = "warn", priority = -1 }
unwrap_used = "warn"
expect_used = "warn"
todo = "warn"
