[package]
name = "widget-64"
version = "0.1.0"
description = "A spatial desktop for standalone Tauri widgets"
authors = ["Pugbread"]
license = "MIT"
repository = "https://github.com/Pugbread/Widget-64"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde_json = "1"
serde = { version = "1", features = ["derive"] }
tauri = { version = "2", features = ["macos-private-api", "devtools", "unstable"] }
portable-pty = "0.8"
uuid = { version = "1", features = ["v4"] }
tauri-plugin-dialog = "2.7.0"
tauri-plugin-process = "2.3.0"
tauri-plugin-updater = "2.10.0"
dirs = "5"
url = "2"
chrono = "0.4"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time", "net"] }
async-trait = "0.1"
reqwest = { version = "0.12", features = ["blocking", "json", "native-tls", "stream"], default-features = false }
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }
futures-util = "0.3"
base64 = "0.22"
rand = "0.8"
zip = "2"
rusqlite = { version = "0.39", features = ["bundled"] }
zerocopy = "0.8"
toml_edit = "0.25"
sha2 = "0.10"
hex = "0.4"

[features]
default = []

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"

[lints.rust]
unsafe_code = "warn"
unused_must_use = "deny"

[lints.clippy]
all = { level = "warn", priority = -1 }
unwrap_used = "warn"
expect_used = "warn"
todo = "warn"
